# fedem-solver-tests

./: CMakeLists.txt  README.md
.github/workflows/: run_test.yml
.reuse/: dep5
FrequencyDomain/: README.md
FrequencyDomain/Frame/: CMakeLists.txt  Frame.fmm  Model.fsi  README.md  Setup.fco  exported_curves.asc  motion.fsi
FrequencyDomain/RobotArm/: CMakeLists.txt  Model.fsi  README.md  Setup.fco  exported_curves.asc  robot_kin.fmm
FrequencyDomain/SpringDamper/: CMakeLists.txt  Model.fsi  README.md  Setup.fco  exported_curves.asc  sd.fmm
FrequencyDomain/Sweep/: B_sweep.fmm  CMakeLists.txt  Model.fsi  README.md  Setup.fco  exported_curves.asc  motion.fsi
FrequencyDomain/Tower/: CMakeLists.txt  Model.fsi  README.md  Setup.fco  Tower.fmm  exported_curves.asc
InversePy/: CMakeLists.txt  README.md  test_utils.py
InversePy/beam_longitudinal/: CMakeLists.txt  Cantilever4_twin.fmm  README.md  fedem_solver.fao  fedem_solver.fco  fedem_solver.fsi  input.yaml  refData.asc  run_API.py
InversePy/beam_modal_forces/: CMakeLists.txt  Cantilever4_twin.fmm  README.md  fedem_solver.fao  fedem_solver.fsi  input.yaml  refData.asc  run_API.py
InversePy/beam_transversal/: CMakeLists.txt  Cantilever4_twin.fmm  README.md  fedem_solver.fco  fedem_solver.fsi  refData.asc  run_API.py
InversePy/corner/: CMakeLists.txt  README.md  fedem_solver.fco  fedem_solver.fsi  frc_twin.fmm  refData.asc  run_API.py
InversePy/crane/: CMakeLists.txt  README.md  fedem_solver.fco  fedem_solver.fsi  refData.asc  run_API.py  tz_twin.fmm
InversePy/frame_disp/: CMakeLists.txt  README.md  fedem_reducer.fco  fedem_reducer.fop  fedem_solver.fsi  frame.bdf  frame.ftl  frame_twin.fmm  input.yaml  run_API.py
InversePy/frame_intF/: CMakeLists.txt  README.md  fedem_solver.fsi  input.yaml  refData.asc  run_API.py
InversePy/frame_modes/: CMakeLists.txt  README.md  fedem_solver.fco  input.yaml  refData.asc  run_API.py
InversePy/frame_relD/: CMakeLists.txt  README.md  fedem_solver.fco  frame_twin.fmm  input.yaml  refData.asc  run_API.py
InversePy/frame_spring/: CMakeLists.txt  README.md  fedem_solver.fsi  frame_twin.fmm  refData.asc  run_API.py
InversePy/frame_strain/: CMakeLists.txt  README.md  fedem_solver.fco  fedem_solver.fsi  frame_twin.fmm  refData.asc  run_API.py
InversePy/shell_strain/: CMakeLists.txt  README.md  fedem_reducer.fco  fedem_reducer.fop  fedem_solver.fco  fedem_solver.fsi  input.yaml  refBaseData.asc  refStrainData.asc  run_API.py  s41_gage_twin.fmm  shell.ftl
Test/: CMakeLists.txt
TimeDomain/: README.md  run.sh
TimeDomain/AW-N80-80-Windturbine/: AW-N80-80-sensors-R73.fmm  AW-N80-80-sensors.fmm  CMakeLists.txt  Gages.fsi  Model-gen.fsi  Model.fsi  N80-base.fco  Oct27-13-20-5min.asc  README.md  Setup.fco  TurbineWithGages.fmm  TurbineWithGagesR73.fmm  loadRecoveryMatrix.f90  loadSupelMatrix.f90  recovery.inc  supels.inc
TimeDomain/AddedMass/: CMakeLists.txt  Clean.fsi  Deflection.asc  Deflection_MarineGrowth.asc  MarineGrowth.fsi  Model-bar.fsi  Model.fsi  README.md  Setup.fco  SubmergedBar.fmm  SubmergedBeam.fmm
TimeDomain/BeamModes/: BarModes.fmm  BeamModes.fmm  CMakeLists.txt  Model-bar.fsi  Model.fsi  README.md  Setup.fco  Water.fsi  bar-modes.asc  dry_modes.asc  wet_modes.asc  wetbar-modes.asc
TimeDomain/CamJoint/: 009_Beam_320x20.ftl  Axle.ftl  CMakeLists.txt  CamWithDamping.asc  CamWithDamping.fco  CamWithDamping.fmm  CamWithDamping.fsi  CamWithDefDamping.fsi  CamWithDeformDamping.fmm  Model.fsi  PearCamWithFriction.fmm  README.md  Setup.fco  SystemEnergy_R253.asc  axle.fco  beam.fco  cam.fco  cam.flm  cam.ftl  slide_damping.asc  wheel.fco  wheel.ftl
TimeDomain/Cantilever-extFunc/: CMakeLists.txt  Cantilever-external.fmm  Cantilever-internal.fmm  Model.fsi  README.md  Setup.fco  TipPosition.asc
TimeDomain/Cantilever-inverse/: CMakeLists.txt  Cantilever4.fmm  Cantilever4Joint.fmm  Displacements.asc  Displacements_dyn.asc  Displacements_grav_dyn.asc  Gravity.fsi  Gravity_dyn.fsi  Master-normalG.asc  Master-zeroG.asc  Model.fsi  ModelWithJoint.fsi  README.md  Setup.fco  Setup_dyn.fco  ZeroG.fsi
TimeDomain/CarSuspension/: CMakeLists.txt  FZ.asc  Model.fsi  README.md  SLA.fmm  Setup.fco  exported_curves.asc  knuckle.fco  knuckle.ftl  knuckle.nas  lca.fco  lca.ftl  uca.fco  uca.ftl  uca.nas
TimeDomain/ConstantCurrent/: CMakeLists.txt  ConstantCurrent.fmm  Model.fsi  README.md  Setup.fco
TimeDomain/DampedOscillator/: CMakeLists.txt  Model.fsi  Oscillator-ramped.fmm  Oscillator.fmm  README.md  Ramp.fao  Setup.fco  constant-damper.asc  constant-damper.fsi  constant-damper1.asc  linear-damper+grav.fsi  linear-damper-ramp.asc  linear-damper.asc  linear-damper.fsi  linear-damper1.asc
TimeDomain/FreeFallTriad/: CMakeLists.txt  FreeFallTriad.fmm  Model.fsi  README.md  Setup.fco  exported_curves.asc
TimeDomain/InternalFluid/: CMakeLists.txt  Deflection.asc  Model.fsi  README.md  Setup.fco  SubmergedBeam.fmm
TimeDomain/MassSpring/: CMakeLists.txt  MassSpring.fmm  Model.fsi  README.md  Setup.fco  exported_curves.asc
TimeDomain/ParticleInWaves/: CMakeLists.txt  Deflection.asc  Model-bar.fsi  Model.fsi  README.md  Setup.fco  SmallBar.fmm  SmallBeam.fmm
TimeDomain/SimplePendulum/: CMakeLists.txt  Model.fsi  README.md  Setup.fco  SimplePendulum.fmm  exported_curves.asc
TimeDomain/SoilDegradation/: CMakeLists.txt  Model.fsi  README.md  Setup.fco  SoilDegradation.fmm  exported_curves.asc
TimeDomain/SubModelling/: 01_01_Global_Coarse.fco  01_01_Global_Coarse.ftl  01_01_Global_Coarse.nas  02_01_Submodel_Coarse.fco  02_01_Submodel_Coarse.nas  02_02_Submodel_Fine.fco  02_02_Submodel_Fine.nas  CMakeLists.txt  PrincipalStresses.asc  README.md  compareFnd.C  glob2sub-fine.fco  glob2sub-rot.fco  glob2sub.fco  globalmodel.fao  globalmodel.fco  globalmodel.fmm  globalmodel.fsi  listFnd.C  rotations.fsi  submodel-fine.fco  submodel-fine.fmm  submodel-fine.fsi  submodel.fao  submodel.fco  submodel.fmm  submodel.fsi
TimeDomain/SubModelling/GroupBmat/: 01_01_Global_Coarse.ftl  CMakeLists.txt  README.md  solver.fco  submodel.fsi  subsubmodel.ftl
(+30 files in other folders)
